--- a/web/products.html
+++ b/web/products.html
@@ -1,271 +1,62 @@
-{% extends 'base.html' %} {% block content %}
+<!DOCTYPE HTML>
+<html>
 
-<script>
-    globals.urls.searchProducts = '{{ url_for("api.products.search", _external=True) }}'
-    globals.urls.addProduct = '{{ url_for("products.add") }}'
-    globals.urls.cardImage = '{{ url_for("static", filename="img/sketches/6.png") }}'
-</script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% raw %}
-<div class="container" id="products-app" v-cloak>
-    <div class="row my-3">
-        <div class="col-8">
-            <span class="display-4">{{ $t('products.title') }}</span>
-            <span class="spinner-border spinner-border-lg ml-3" role="status" aria-hidden="true" v-if="contentLoading"></span>
-        </div>
-        <div class="col d-flex flex-row-reverse align-items-end" v-if="creator">
-            <button class="btn btn-primary d-block d-lg-none"
-                    type="button" data-toggle="modal" data-target="#edit-modal"
-                    :data-link="addProductLink"
-                    :data-mname="$t('products.editModal.addTitle')"
-                    :data-bname="$t('products.editModal.addButton')">
-                {{ $t('products.addNewShort') }}
-            </button>
-        </div>
-    </div>
+  <link rel="stylesheet" type="text/css" href="./src/css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="./src/css/fontawesome/css/fontawesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="./src/css/fontawesome/css/solid.min.css" />
 
-    <div class="row my-3" v-if="!contentLoading">
-        <div class="col-auto d-none d-lg-block" v-if="creator">
-            <div class="card shadow" style="width: 18rem;">
-                <img :src="cardImage" class="card-img-top bg-light" alt="">
-                <h5 class="card-header">{{ $t('products.cardHeader') }}</h5>
-                <div class="card-body">
-                    <p class="card-text">{{ $t('products.cardText') }}</p>
-                    <button type="button" class="btn btn-primary w-100"
-                            data-toggle="modal" data-target="#edit-modal"
-                            :data-link="addProductLink"
-                            :data-mname="$t('products.editModal.addTitle')"
-                            :data-bname="$t('products.editModal.addButton')">
-                        <i class="fas fa-plus"></i> {{ $t('products.addNew') }}
-                    </button>
-                </div>
-            </div>
-        </div>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+    crossorigin="anonymous"></script>
 
-        <div class="col">
-{% endraw %}
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-secondary" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-{% raw %}
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">
-                        <i class="fas fa-search"></i>
-                    </span>
-                </div>
-                <input :placeholder="$t('products.searchPlaceholder')"
-                       type="text" class="form-control" v-model="search" id="input-search">
-            </div>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-            <table class="table table-sm table-hover table-responsive-xs">
-                <thead class="thead-light">
-                    <tr>
-                        <th class="text-right" scope="col" style="width: 8%">{{ $t('products.table.id') }}</th>
-                        <th scope="col" style="width: 52%">{{ $t('products.table.name') }}</th>
-                        <th class="text-right" scope="col" style="width: 8%">{{ $t('products.table.calories') }}</th>
-                        <th class="text-right d-none d-sm-table-cell" scope="col" style="width: 8%">{{ $t('products.table.proteins') }}</th>
-                        <th class="text-right d-none d-sm-table-cell" scope="col" style="width: 8%">{{ $t('products.table.fats') }}</th>
-                        <th class="text-right d-none d-sm-table-cell" scope="col" style="width: 8%">{{ $t('products.table.carbs') }}</th>
-                        <th class="text-right" scope="col" style="width: 8%" v-if="editor">{{ $t('products.table.archive') }}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="product in products" class="showhim">
-                        <th class="text-right" scope="row">{{ product.id }}</th>
-                        <td>{{ product.name }}</td>
-                        <td class="text-right">{{ product.calories.toFixed(1) }}</td>
-                        <td class="text-right d-none d-sm-table-cell">{{ product.proteins.toFixed(1) }}</td>
-                        <td class="text-right d-none d-sm-table-cell">{{ product.fats.toFixed(1) }}</td>
-                        <td class="text-right d-none d-sm-table-cell">{{ product.carbs.toFixed(1) }}</td>
-                        <td v-if="editor">
-                            <span class="text-right float-right mx-1 showme">
-                                <a data-toggle="modal"
-                                   data-target="#edit-modal"
-                                   :data-name="product.name"
-                                   :data-calories="product.calories"
-                                   :data-proteins="product.proteins"
-                                   :data-fats="product.fats"
-                                   :data-carbs="product.carbs"
-                                   :data-grams="product.grams ? product.grams : ''"
-                                   :data-link="product.edit_link"
-                                   :data-mname="$t('products.editModal.editTitle')"
-                                   :data-bname="$t('products.editModal.editButton')"
-                                   href="javascript:void(0);">
-                                    <i class="fas fa-pen" :title="$t('products.editButtonTitle')"></i>
-                                </a>
-                            </span>
-                            <span class="text-right float-right mx-1 showme">
-                                <a :href="product.archive_link" :title="$t('products.archiveButtonTitle')">
-                                    <i class="text-danger fas fa-archive"></i>
-                                </a>
-                            </span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+  <title>Hikehub - собираем еду в поход</title>
 
-            <nav>
-                <ul class="pagination">
-                    <li class="page-item" :class="{ disabled: page == 0 }">
-                        <a class="page-link" @click="prevPage">
-                            <i class="fas fa-arrow-left"></i>
-                        </a>
-                    </li>
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      var z = null; m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-                    <li class="page-item" :class="{ disabled: page == lastPage} ">
-                        <a class="page-link" @click="nextPage">
-                            <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</div>
+    ym(88901903, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
+</head>
 
-<!-- Add/edit a product modal -->
-<div id="edit-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="edit-modal-title" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form id="edit-form" method="POST" v-bind:action="submitLink" novalidate>
-                <div class="modal-header">
-                    <h5 class="modal-title" id="edit-modal-title">
-                        {{ modalTitle }}
-                    </h5>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group row">
-                        <label for="add-name-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.nameTitle') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="name" id="add-name-input"
-                                :placeholder="$t('products.editModal.namePlaceholder')"
-                                :class="{ 'is-valid': validation.name, 'is-invalid': !validation.name }"
-                                v-model="productName" @focus="$event.target.select()"
-                                autocomplete="off" tabindex="1">
-                            <div class="invalid-feedback">
-                                {{ $t('products.editModal.errorEmptyName') }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="add-calories-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.caloriesTitle') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="calories" id="add-calories-input"
-                                    :placeholder="$t('products.editModal.caloriesTitle')"
-                                    autocomplete="off" v-model="calories" @focus="$event.target.select()"
-                                    :class="{'is-valid': validation.cals, 'is-invalid': !validation.cals}"
-                                    :readonly="caloriesLock" tabindex="2">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="button" id="button-addon-lock"
-                                        data-toggle="button" autocomplete="off" aria-pressed="false"
-                                        @click="lockCalories" tabindex="3">
-                                        {{ $t('products.editModal.lockButton') }}
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="invalid-feedback d-block" v-if="!validation.cals">
-                                {{ $t('products.editModal.errorWrongCalories') }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="add-proteins-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.proteinsTitle') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="proteins" id="add-proteins-input"
-                                v-model="proteins"
-                                :class="{'is-valid': validation.proteins, 'is-invalid': !validation.proteins}"
-                                autocomplete="off" tabindex="4" @focus="$event.target.select()">
-                            <div class="invalid-feedback">{{ $t('products.editModal.wrongNutrient') }}</div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="add-fats-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.fatsTitle') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="fats" id="add-fats-input" v-model="fats"
-                                :class="{'is-valid': validation.fats, 'is-invalid': !validation.fats}"
-                                autocomplete="off" tabindex="5" @focus="$event.target.select()">
-                            <div class="invalid-feedback">{{ $t('products.editModal.wrongNutrient') }}</div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="add-carbs-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.carbsTitle') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="carbs" id="add-carbs-input" v-model="carbs"
-                                :class="{'is-valid': validation.carbs, 'is-invalid': !validation.carbs}"
-                                autocomplete="off" tabindex="6" @focus="$event.target.select()">
-                            <div class="invalid-feedback">{{ $t('products.editModal.wrongNutrient') }}</div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-2"
-                            :class="{'text-info': validation.nutrition, 'text-danger': !validation.nutrition}">
-                            {{ $t('products.editModal.noteTitle') }}
-                        </div>
-                        <div class="col-sm-10"
-                            :class="{'text-info': validation.nutrition, 'text-danger font-weight-bolder': !validation.nutrition}">
-                            {{ $t('products.editModal.noteDescription') }}
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-sm-2 col-form-label"></div>
-                        <div class="col-sm-10 custom-control custom-checkbox my-1">
-                            <div class="form-check pl-3">
-                                <input type="checkbox" class="custom-control-input align-middle" id="add-custom-weight"
-                                    v-model="custom" tabindex="7">
-                                <label class="custom-control-label align-middle" for="add-custom-weight">
-                                    {{ $t('products.editModal.gramsCheckboxDescription') }}
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row" v-if="custom">
-                        <label for="add-gpp-input" class="col-sm-2 col-form-label">
-                            {{ $t('products.editModal.mass') }}
-                        </label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="grams" id="add-gpp-input" v-model="grams"
-                                :class="{'is-valid': validation.grams, 'is-invalid': !validation.grams}"
-                                autocomplete="off" tabindex="8" @focus="$event.target.select()">
-                            <div class="invalid-feedback">
-                                {{ $t('products.editModal.errorWrong') }}
-                            </div>
-                            <small class="form-text text-muted">
-                                {{ $t('products.editModal.massDescription') }}
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary col-6 col-sm-3" data-dismiss="modal" type="button" tabindex="10">
-                        {{ $t('products.editModal.closeButton') }}
-                    </button>
-                    <button class="btn btn-primary col-6 col-sm-3" type="submit" :disabled="!formValid" tabindex="9">
-                        {{ buttonName }}
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<body class="bg-light">
+  <div id="nav-app" v-cloak></div>
+  <div id="products-app" v-cloak></div>
 
-{% endraw %}
-<script src="{{ url_for('static', filename='js/products.js')}}" type="module"></script>
-{% endblock %}
+  <script src="./src/navbar.ts" type="module" defer></script>
+  <script src="./src/products.ts" type="module" defer></script>
+</body>
+
+</html>
