--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="https://hikehub.ru/">
     <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="row pt-5 justify-content-center">
             <div class="col-md-8">
-                <img src="static/img/2.jpg" class="w-100"/>
+                <img src="./static/img/2.jpg" class="w-100"/>
             </div>
         </div>
         <div class="row pt-3 justify-content-center">
@@ -94,7 +94,7 @@
         <div class="row pt-5 justify-content-center">
             <div class="col-md-8">
                 <video width="100%" height="100%" muted="true" loop="true" autoplay>
-                    <source src="static/vid/1.mp4" type="video/mp4">
+                    <source src="./static/vid/1.mp4" type="video/mp4">
                     Ваш браузер не поддерживает воспроизведение видео.
                 </video>
             </div>
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="row pt-5 justify-content-center">
             <div class="col-md-8">
-                <img src="static/img/3.jpg" class="w-100"/>
+                <img src="./static/img/3.jpg" class="w-100"/>
             </div>
         </div>
         <div class="row pt-3 justify-content-center">
