Adjust layout of tutorial

--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-    <link rel="stylesheet" href="/static/css/info.css">
+    <link rel="stylesheet" href="./static/css/info.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -56,14 +56,14 @@
                     Для удобства руководство разбито на короткие шаги.
                 </p>
 
-                <h2 class="display-4">Создание похода</h2>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/1.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h2 class="display-4 pt-5">Создание похода</h2>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/1.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Всё начинается с&nbsp;создания похода.
                     Сразу после короткой регистрации вы&nbsp;увидите блок, как на&nbsp;картинке.
                     Нажмите кнопку <a href="/trips/add">&laquo;Создать поход&raquo;</a> и&nbsp;заполните появившуюся форму.
                 </p>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/2.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/2.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Вам нужно придумать название похода, указать даты для расчета приемов пищи и&nbsp;сколько групп питания у&nbsp;вас будет.
                     Под группой питания имеются в&nbsp;виду люди, которые едят из&nbsp;одного котелка.
@@ -76,8 +76,8 @@
                     Он&nbsp;сохранится в&nbsp;вашем списке походов, и&nbsp;вы&nbsp;сможете вернуться к&nbsp;нему в&nbsp;любой момент.
                 </p>
 
-                <h2 class="display-4">Наполнение меню</h2>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/3.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h2 class="display-4 pt-5">Наполнение меню</h2>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/3.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Страница похода разделена на&nbsp;две части.
                     Слева находятся элементы управления, справа&nbsp;&mdash; дни для заполнения.
@@ -90,7 +90,7 @@
                     Чтобы добавить новый продукт в&nbsp;прием пищи, нажмите кнопку со&nbsp;знаком &laquo;плюс&raquo; в&nbsp;правой части заголовка.
                     Откроется диалог, где вы&nbsp;сможете найти нужный продукт.
                 </p>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/4.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/4.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Диалог позволяет вам искать продукт по&nbsp;его имени или части.
                     Например, вы&nbsp;можете ввести &laquo;шоко&raquo;, и&nbsp;в&nbsp;базе продуктов будут найдены все шоколадки.
@@ -99,7 +99,7 @@
                     <strong>Масса продукта указывается на&nbsp;одного человека на&nbsp;один прием пищи.</strong>
                     Приложение само рассчитает общую массу на&nbsp;всех туристов.
                 </p>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/5.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/5.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>Некоторые продукты удобно брать в&nbsp;штуках, например, конфеты.
                     Если вы&nbsp;добавляете такой продукт, то&nbsp;справа от&nbsp;поля &laquo;масса&raquo; есть выпадающее меню, в&nbsp;котором можно выбрать штуки.
                     Штуки также указываются на&nbsp;одного человека.
@@ -111,8 +111,8 @@
                     После создания продукта его смогут использовать другие туристы.
                 </p>
 
-                <h3 class="display-4">Создание продукта</h3>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/6.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h3 class="display-4 pt-5">Создание продукта</h3>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/6.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Чтобы создать продукт нажмите на&nbsp;ссылку <a href="/products/">&laquo;Продукты&raquo;</a> в&nbsp;верхней панели сайта.
                     Вы&nbsp;попадете в&nbsp;раздел со&nbsp;всеми продуктами в&nbsp;базе.
@@ -121,8 +121,8 @@
                     Сервис может самостоятельно рассчитывать калорийность, для этого нажмите кнопку &laquo;Вычислять&raquo; в&nbsp;правой части поля ввода.
                 </p>
 
-                <h3 class="display-4">Как упростить заполнение раскладки</h3>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/7.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h3 class="display-4 pt-5">Как упростить заполнение раскладки</h3>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/7.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Если вы&nbsp;идете в&nbsp;долгий поход, то&nbsp;заполнять каждый день может быть утомительно.
                     Чтобы упростить создание продуктовой раскладки, сервис может копировать содержимое дней.
@@ -131,8 +131,8 @@
                     В&nbsp;появившемся диалоге укажите какие дни скопировать и&nbsp;куда.
                 </p>
 
-                <h2 class="display-4">Поход в магазин</h2>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/8.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h2 class="display-4 pt-5">Поход в магазин</h2>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/8.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Когда вы&nbsp;полностью составили меню и&nbsp;обсудили его с&nbsp;группой, настало время идти покупать продукты.
                     Сервис автоматически составляет список для покупки продуктов.
@@ -143,15 +143,15 @@
                     Рядом с&nbsp;каждым продуктом указано необходимое количество в&nbsp;граммах или штуках.
                 </p>
 
-                <h2 class="display-4">Фасовка</h2>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/9.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <h2 class="display-4 pt-5">Фасовка</h2>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/9.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Когда все продукты куплены, и&nbsp;вы&nbsp;готовы заняться упаковкой, нажмите на&nbsp;кнопку &laquo;Отчет для фасовки&raquo; на&nbsp;странице похода.
                     В&nbsp;отчете содержатся все продукты, сгруппированные по&nbsp;дням.
                     Каждый прием пищи имеет свой цвет, например, завтраки&nbsp;&mdash; зеленые, обеды&nbsp;&mdash; желтые.
                     Это сделано для удобства фасовки, чтобы было легко найти нужный прием пищи.
                 </p>
-                <div class="d-flex justify-content-center"><img src="/static/img/tutorial/10.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
+                <div class="d-flex justify-content-center"><img src="./static/img/tutorial/10.jpg" class="mb-4 mh-100 mw-100 shadow"/></div>
                 <p>
                     Вы&nbsp;можете настраивать нужное количество информации на&nbsp;экране.
                     Для этого выберите в&nbsp;выпадающем меню сверху нужное количество дней в&nbsp;одном ряду.
