--- a/web/info.html
+++ b/web/info.html
@@ -2,77 +2,86 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-    <link rel="stylesheet" href="/static/css/info.css">
+  <link rel="stylesheet" href="./src/css/styles.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Hikehub">
-    <meta property="og:description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
-    <meta property="og:url" content="https://hikehub.ru/">
-    <meta property="og:image" content="https://hikehub.ru/apple-touch-icon.png">
-    <meta property="og:locale" content="ru_RU">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Hikehub">
+  <meta property="og:description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
+  <meta property="og:url" content="https://hikehub.ru/">
+  <meta property="og:image" content="https://hikehub.ru/apple-touch-icon.png">
+  <meta property="og:locale" content="ru_RU">
 
-    <title>Hikehub - собираем еду в поход</title>
+  <title>Hikehub - собираем еду в поход</title>
 
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(88901903, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
+    ym(88901903, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
-    <div class="container">
-        <div class="row my-3">
-            <div class="col">
-                <small><a href="/">Вернуться на главную</a></small>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col">
-                <h1 class="display-4">Информация</h1>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col-lg-8">
-                <h2>Отказ от ответственности</h2>
-                <p>
-                    Данный проект не&nbsp;содержит никакой обязательной лицензии.
-                    Вся функциональность предоставляется &laquo;как есть&raquo;.<br/>
-                    Вы&nbsp;используете проект на&nbsp;свой страх и&nbsp;риск.
-                    Мы&nbsp;не&nbsp;несем никакой ответственности в&nbsp;случае возникновения проблем, вызванных неправильным использованием продукта.
-                </p>
-
-                <h2>Информация о лицензиях</h2>
-                <p>
-                    Вся графика на&nbsp;этом сайте взята с&nbsp;сайта freepik.com.<br/>
-                    Как того требует лицензия для использования графических материалов, мы&nbsp;предоставляем копирайты дизайнеров, выполнивших работы ниже.
-                </p>
-                <p>
-                    <a href="https://www.freepik.com">Designed by macrovector / Freepik</a>
-                </p>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row my-3">
+      <div class="col">
+        <small><a href="/">Вернуться на главную</a></small>
+      </div>
     </div>
+    <div class="row my-3">
+      <div class="col">
+        <h1 class="display-4">Информация</h1>
+      </div>
+    </div>
+    <div class="row my-3">
+      <div class="col-lg-8">
+        <h2>Отказ от ответственности</h2>
+        <p>
+          Данный проект не&nbsp;содержит никакой обязательной лицензии.
+          Вся функциональность предоставляется &laquo;как есть&raquo;.<br />
+          Вы&nbsp;используете проект на&nbsp;свой страх и&nbsp;риск.
+          Мы&nbsp;не&nbsp;несем никакой ответственности в&nbsp;случае возникновения проблем, вызванных неправильным
+          использованием продукта.
+        </p>
+
+        <h2>Информация о лицензиях</h2>
+        <p>
+          Вся графика на&nbsp;этом сайте взята с&nbsp;сайта freepik.com.<br />
+          Как того требует лицензия для использования графических материалов, мы&nbsp;предоставляем копирайты
+          дизайнеров, выполнивших работы ниже.
+        </p>
+        <p>
+          <a href="https://www.freepik.com">Designed by macrovector / Freepik</a>
+        </p>
+      </div>
+    </div>
+  </div>
 
 </body>
 
