Fix compilation issues with new Vite

--- a/web/index.html
+++ b/web/index.html
@@ -42,13 +42,14 @@
       webvisor: true
     });
   </script>
-  <noscript>
-    <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
-  </noscript>
   <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+
   <div class="container-fluid" id="header">
     <div class="container py-5">
       <div class="row d-none d-md-block" style="padding-top: 10rem;"></div>
@@ -94,6 +95,10 @@
           Автоматически составит список покупок и&nbsp;отчет для фасовки.
           Вам остается придумать меню и&nbsp;добавить продукты.
         </p>
+        <!-- <p>
+          А&nbsp;<a href="https://hikehub.ru/meals/wmALVrLq528">вот так</a> выглядит пример
+          настоящего похода в&nbsp;приложении:
+        </p> -->
       </div>
     </div>
   </div>
