--- a/web/trips.html
+++ b/web/trips.html
@@ -41,21 +41,9 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col"></div>
-      <div class="col-xxl-4 col-xl-5 col-lg-6 col-md-8 col-xs-12" id="app" v-cloak></div>
-      <div class="col"></div>
-    </div>
-  </div>
+  <div id="trips-app" v-cloak></div>
 
-  <script src="./src/auth.ts" type="module" defer></script>
-  <script>
-    function captchaOnload() {
-      window.onCaptchaLoad(grecaptcha)
-    }
-  </script>
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit&onload=captchaOnload" defer></script>
+  <script src="./src/trips.ts" type="module" defer></script>
 </body>
 
 </html>
