--- a/web/auth.html
+++ b/web/auth.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col"></div>
-      <div class="col-xxl-4 col-xl-5 col-lg-6 col-md-8 col-xs-12" id="app" v-cloak></div>
+      <div class="col-xxl-4 col-xl-5 col-lg-6 col-md-8 col-xs-12" id="app"></div>
       <div class="col"></div>
     </div>
   </div>
