--- a/web/trips.html
+++ b/web/trips.html
@@ -41,7 +41,7 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 
-  <div id="trips-app" v-cloak></div>
+  <div id="trips-app"></div>
 
   <script src="./src/trips.ts" type="module" defer></script>
 </body>
