Make more general reports app

--- a/web/reports.html
+++ b/web/reports.html
@@ -41,9 +41,9 @@
     <div><img src="https://mc.yandex.ru/watch/88901903" style="position:absolute; left:-9999px;" alt="" /></div>
    </noscript>
 
-  <div id="shopping-app"></div>
+  <div id="reports-app"></div>
 
-  <script src="./src/shopping.ts" type="module" defer></script>
+  <script src="./src/reports.ts" type="module" defer></script>
 </body>
 
 </html>
