--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -58,7 +58,7 @@
     <div class="row my-3">
       <div class="d-none d-lg-block col-2"></div>
       <div class="col-lg-8">
-        <h1 class="display-3">Как пользоваться сервисом</h1>
+        <h1 class="display-3">Как пользоваться сайтом</h1>
         <p class="lead">
           В этом руководстве описан полный путь от создания похода до покупки и фасовки продуктов.
           Для удобства руководство разбито на короткие шаги.
@@ -70,7 +70,7 @@
         <p>
           Всё начинается с&nbsp;создания похода.
           Сразу после короткой регистрации вы&nbsp;увидите блок, как на&nbsp;картинке.
-          Нажмите кнопку <a href="/trips/add">&laquo;Создать поход&raquo;</a> и&nbsp;заполните появившуюся
+          Нажмите кнопку &laquo;Создать поход&raquo; и&nbsp;заполните появившуюся
           форму.
         </p>
         <div class="d-flex justify-content-center"><img src="./static/img/tutorial/2.jpg"
