Add survey + remove TG chat link

--- a/web/index.html
+++ b/web/index.html
@@ -172,10 +172,8 @@
             Дизайн сайта выполнен <a class="text-white" href="https://t.me/RinaYudina">Ириной</a>.
           </p>
           <p class="text-white">
-            У&nbsp;нас есть <a class="text-white" href="https://t.me/hikehubru">чат в&nbsp;телеграм</a>.
-            Там можно задать вопросы и&nbsp;предложить улучшения.
-            Ещё есть <a class="text-white" href="/info.html">страница</a> со&nbsp;всякой дополнительной информацией
-            и&nbsp;документами.
+            У нас есть <a class="text-white" href="/info.html">страница</a> со&nbsp;всякой
+            дополнительной информацией и&nbsp;документами.
           </p>
           <p class="text-white">Поделитесь ссылкой на&nbsp;сайт в&nbsp;соцсетях. Это поможет развитию проекта.</p>
           <div class="d-none d-md-block">
