Include only what is needed from Bootstrap

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://hikehub.ru/">
   <meta name="description" content="Сервис для подготовки еды в поход. Собирайте питание умно и легко.">
 
-  <link rel="stylesheet" href="./src/css/landing.css">
+  <link rel="stylesheet" href="./src/css/landing.scss">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -56,8 +56,8 @@
       <div class="row d-none d-sm-block d-md-none" style="padding-top: 5rem;"></div>
       <div class="row mt-5 justify-content-center">
         <div class="col-md-8 justify-content-lg-center">
-          <h1 class="display-2 text-uppercase text-white text-center text-lg-left">Hikehub</h1>
-          <p class="h2 text-white text-center text-lg-left">
+          <h1 class="display-2 text-uppercase text-white text-center text-lg-start">Hikehub</h1>
+          <p class="h2 text-white text-center text-lg-start">
             Сервис для подготовки еды в&nbsp;поход.<br />
             Собирайте питание умно и&nbsp;легко.
           </p>
@@ -156,7 +156,7 @@
     <div class="container">
       <div class="row justify-content-center pb-2">
         <div class="col-md-8 text-white">
-          <h2 class="text-center text-lg-left">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
+          <h2 class="text-center text-lg-start">Облегчите подготовку к&nbsp;походу с&nbsp;HIKEHUB</h2>
         </div>
       </div>
       <div class="row pb-5">
